--- a/config/config.env
+++ b/config/config.env
@@ -1,3 +1,3 @@
 PORT=5000
 NODE_ENV=production
-MONGO_URI =mongodb+srv://titoh:titoh123@cluster0-4l2e2.mongodb.net/Wasify?retryWrites=true&w=majority
+MONGO_URI =mongodb+srv://Mogaka_dev:manyara5766@cluster0.nqohn.gcp.mongodb.net/<dbname>?retryWrites=true&w=majority
